# RustOrBust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
PyO3/: .gitignore  .python-version  README.md
PyO3/py_number/: Cargo.toml  pyproject.toml
PyO3/py_number/src/: lib.rs  tester.py
PyO3/quickstart_p2r/: Cargo.toml
PyO3/quickstart_r2p/: Cargo.toml  pyproject.toml
PyO3/quickstart_r2p/src/: lib.rs  tester.py
async/: README.md
async/async_await/: Cargo.toml
async/async_await_intro/: Cargo.toml
async/async_std_chat/: Cargo.toml
async/concurrent_web_server/: Cargo.toml
async/futures_and_tasks/: Cargo.toml
async/multi_async_ops/: Cargo.toml
async/pinning/: Cargo.toml
async/pinning/src/: main.rs
async/stream_trait/: Cargo.toml
async/workarrounds/: Cargo.toml
bevy/: README.md
bevy/picking/: Cargo.toml
bevy/pong/: Cargo.toml
bevy/quickstart_ecs/: Cargo.toml
bevy/three_d_shapes/: Cargo.toml
bevy/three_d_shapes/src/: main.rs
bindgen_experiments/: .gitignore  Cargo.toml  README.md  build.rs  futurama_quotes.txt
bindgen_experiments/hello/: hello.c  hello.h
bindgen_experiments/include/: input.h
bindgen_experiments/src/: bindings.rs  lib.rs
clis_and_tuis/: README.md
clis_and_tuis/basics/misc/: Cargo.toml  settings.toml
clis_and_tuis/basics/misc/src/: main.rs
cookbook/: README.md
cookbook/algorithms/: Cargo.toml
cookbook/cmd_cli/: Cargo.toml
data_fusion/: Cargo.toml
data_fusion/src/: main.rs
data_structures_and_algos/: Cargo.toml  README.md
data_structures_and_algos/.cargo/: config
data_structures_and_algos/ch1_refresher/: Cargo.toml
data_structures_and_algos/ch2_crate_test/: Cargo.toml
data_structures_and_algos/ch3_efficient_storage/: Cargo.toml
data_structures_and_algos/ch4_lists/: Cargo.toml
data_structures_and_algos/ch5_trees/: Cargo.toml
effective_rust/: Cargo.toml
effective_rust/src/: main.rs
hello_world/: README.md
macros/: README.md
macros/builder/: Cargo.toml
macros/declerative/: Cargo.toml
macros/make-private/: Cargo.toml
macros/make-public/: Cargo.toml
macros/procedural-basic/: Cargo.toml
polars/: .gitignore  README.md
polars/polars_py/: polars.ipynb
polars/polars_rs/: Cargo.toml
rust_book/: README.md
rust_book/hello_cargo/: README.md
rust_by_example/: README.md
rust_by_example/attributes/: examples.rs
rust_by_example/cargo/foo/: Cargo.toml
rust_by_example/cargo/foo/src/: main.rs
rust_by_example/conversions/: examples.rs
rust_by_example/custom_types/: examples.rs
rust_by_example/error_handling/: examples.rs
rust_by_example/expressions/: examples.rs
rust_by_example/flow_control/: examples.rs
rust_by_example/functions/: examples.rs
rust_by_example/generics/: examples.rs
rust_by_example/hello_world/: examples.rs  hello.rs
rust_by_example/macros/: examples.rs
rust_by_example/modules/: examples.rs  fs_mod.rs
rust_by_example/primatives/: examples.rs
rust_by_example/scoping/: examples.rs
rust_by_example/std_lib_types/: examples.rs
rust_by_example/std_misc/: examples.rs
rust_by_example/traits/: examples.rs
rust_by_example/types/: examples.rs
rust_by_example/unsafe_ops/: examples.rs
rust_by_example/variable_bindings/: examples.rs
rustonomicon/: README.md
rustonomicon/concurrency_and_parallelism/: Cargo.toml
rustonomicon/data_layout/: Cargo.toml
rustonomicon/ffi/: .gitignore  Cargo.toml  build.rs
rustonomicon/lifetimes/: Cargo.toml
rustonomicon/my_arc/: Cargo.toml
rustonomicon/my_vec/: Cargo.toml
rustonomicon/orbm/: Cargo.toml
rustonomicon/safe_but_unsound/: Cargo.toml
rustonomicon/type_conversions/: Cargo.toml
rustonomicon/uninitialized_memory/: Cargo.toml
sea_orm/: README.md
sea_orm/bakery-backend/: Cargo.toml
sea_orm/rocket-example/: Cargo.toml
testing/: Cargo.toml
testing/src/: lib.rs
testing/tests/: integration_test.rs
tokio/: README.md
tokio/axum-tokio/: Cargo.toml
tokio/axum-tokio/src/: book.rs  data.rs  main.rs
tokio/my-redis/: Cargo.toml
tokio/tonic-grpc/: Cargo.toml  build.rs
tokio/tonic-grpc/src/: client.rs  data.rs  server.rs
wasm/: README.md
wasm/snake_game/: Cargo.toml
webdev/leptos/: README.md
webgpu/: Cargo.toml
webgpu/src/: lib.rs
(+150 files in other folders)
